# liver-microsome-prediction

./: .gitignore  README.md  pyproject.toml
liver_microsome_prediction/: 1_base.ipynb  1_example_random_forest.ipynb  2_example_random_forest_no_folds.ipynb  2_mine.ipynb  3_example_lgbm_catboost.ipynb  3_semi-supervised-learning-GCN.ipynb  EDA.ipynb  processing.py  torch_MPNN.ipynb  utils.py
liver_microsome_prediction/common/: __init__.py  config.py  env.py  timer.py  utils.py
liver_microsome_prediction/modeling/: GCN.py  GIN.py  MPNN.py
