[tool.poetry]
name = "liver-microsome-prediction"
version = "0.1.0"
description = "Liver microsome prediction"
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"
packages = [{include = "liver_microsome_prediction"}]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.25.2"
ipython = "*"
pandas = "*"
seaborn = "^0.12.2"
torch = "*"
deepchem = "*"
scikit-learn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
