[tool.poetry]
name = "liver-microsome-prediction"
version = "0.1.0"
description = "Liver microsome prediction"
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"
packages = [{include = "liver_microsome_prediction"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "2.0.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
