[tool.poetry]
name = "liver-microsome-prediction"
version = "0.1.0"
description = "Liver microsome prediction"
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"
packages = [{include = "liver_microsome_prediction"}]

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
